代码调整:调度器下的资源上报

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <lombok.version>1.18.22</lombok.version>
         <redisson.version>3.17.0</redisson.version>
         <spring.doc.version>1.6.8</spring.doc.version>
-        <pagehelper.version>5.3.0</pagehelper.version>
+        <pagehelper.version>1.4.2</pagehelper.version>
         <spring.boot.version>2.6.7</spring.boot.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <junit-jupiter.version>5.8.2</junit-jupiter.version>
@@ -53,7 +53,7 @@
             </dependency>
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper.version}</version>
             </dependency>
             <dependency>
