获取版本接口

--- a/app/src/main/resources/watchman.properties
+++ b/app/src/main/resources/watchman.properties
@@ -12,3 +12,4 @@ log.queue.size          = 25000
 backend.queue.capacity  = 5000
 java.options            = -Xmx2048m -Xms2048m -XX:MaxMetaspaceSize=256m
 tps.target.level.factor = 0.1
+application.version     = @project.version@
