配置文件调整

--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -1,3 +1,5 @@
+# \u670D\u52A1\u7AEF\u53E3\u914D\u7F6E
+server.port                          = 10010
 # \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.username           = root
 spring.datasource.password           = shulie@2020
