资源实例镜像

--- a/app/src/main/resources/application-watchman.properties
+++ b/app/src/main/resources/application-watchman.properties
@@ -1,4 +1,4 @@
-watchman.container-image         = 192.168.1.119/library/pressure-engine:5.2.3-x
+watchman.container-image         = 192.168.1.89/library/pressure-engine:5.3.0-x6
 watchman.nfs-server              = 192.168.1.225
 watchman.nfs-directory           = /data/share
 watchman.zk-address              = 192.168.1.154:2181,192.168.1.154:2181,192.168.1.154:2181
