--- a/app/src/main/resources/application-watchman.properties
+++ b/app/src/main/resources/application-watchman.properties
@@ -2,7 +2,7 @@ watchman.container-image         = 192.168.1.89/library/pressure-engine:5.3.0-x6
 watchman.nfs-server              = 192.168.1.225
 watchman.nfs-directory           = /data/share
 watchman.zk-address              = 192.168.1.154:2181,192.168.1.154:2181,192.168.1.154:2181
-watchman.ptl-upload-from         = cloud
+watchman.ptl-upload-from         = engine
 watchman.ptl-file-enable         = true
 watchman.ptl-file-error-only     = false
 watchman.ptl-file-timeout-only   = false
