打包规则 & README.md

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ plugins {
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+bootJar {
+    archiveFileName = 'takin-cloud-app-' + project.version + '.jar'
+}
 
 dependencies {
     // 项目内依赖
