--- a/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
@@ -1,25 +1,23 @@
 plugins {
+    id 'java'
     id 'java-library'
     id 'maven-publish'
 }
 
 repositories {
     mavenLocal()
-
     maven {
         url = uri('https://maven.aliyun.com/nexus/content/groups/public')
     }
-
     maven {
         url = uri('https://packages.aliyun.com/maven/repository/2101190-release-xxuvBf/')
     }
-
     maven {
         url = uri('https://packages.aliyun.com/maven/repository/2101190-snapshot-EQD7pQ/')
     }
 }
 
-group = 'io.shulie.takin.cloud'
+group = 'io.shulie.takin.cloud.gradle'
 version = '5.3.2'
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -33,4 +31,18 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+
+java {
+    javadoc.options.addStringOption('Xdoclint:none', '-quiet')
+    withJavadocJar()
+    withSourcesJar()
+}
+
+javadoc {
+    options.addStringOption("charset", "UTF-8")
+    if (JavaVersion.current().isJava9Compatible()) {
+        options.addBooleanOption('html5', true)
+    }
 }
