--- a/app/src/main/resources/application-default.properties
+++ b/app/src/main/resources/application-default.properties
@@ -19,4 +19,5 @@ spring.influxdb.database                                  = crank
 # \u5176\u5B83\u914D\u7F6E
 mybatis.mapper-locations                                  = classpath:mapper/*.xml
 mybatis-plus.global-config.banner                         = false
+mybatis-plus.configuration.log-impl                       = io.shulie.takin.cloud.app.conf.MyBatisLogger
 spring.jackson.deserialization.fail_on_unknown_properties = false
