--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     // spring-boot
     implementation 'org.springframework.boot:spring-boot-test:2.6.7'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.7'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.6.7'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     // redis
     implementation 'org.redisson:redisson-spring-boot-starter:3.17.0'
     // mysql
