--- a/app/src/main/resources/application-watchman.properties
+++ b/app/src/main/resources/application-watchman.properties
@@ -13,4 +13,4 @@ watchman.log-queue-size          = 25000
 watchman.backend-queue-capacity  = 5000
 watchman.java-options            = -Xmx2048m -Xms2048m -XX:MaxMetaspaceSize=256m
 watchman.tps-target-level-factor = 0.1
-watchman.application-version     = @project.version@
+watchman.application-version     = ${version}
