--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,15 @@ plugins {
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+
 bootJar {
     archiveFileName = 'takin-cloud-app-' + project.version + '.jar'
+}
+
+processResources {
+    filesMatching('application-watchman.properties') {
+        expand(project.properties)
+    }
 }
 
 dependencies {
