--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation project(':model')
     implementation project(':constant')
     // lombok
-    implementation libs.lombok
+    compileOnly libs.lombok
     annotationProcessor libs.lombok
     // spring-boot
     implementation libs.spring.boot.test
