--- a/constant/build.gradle
+++ b/constant/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 dependencies {
-    implementation libs.lombok
+    compileOnly libs.lombok
     annotationProcessor libs.lombok
 
     implementation libs.hutool
