--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     // 其它
     implementation 'cn.hutool:hutool-all:5.7.22'
     implementation 'org.influxdb:influxdb-java:2.22'
+    implementation 'dom4j:dom4j:1.6.1'
 }
 
 description = 'app'
