--- a/model/build.gradle
+++ b/model/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compileOnly 'cn.hutool:hutool-all:5.7.22'
     compileOnly 'org.influxdb:influxdb-java:2.22'
     compileOnly 'org.springdoc:springdoc-openapi-ui:1.6.8'
+    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 }
 
 description = 'model'
