--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,34 @@ plugins {
     id 'org.springframework.boot' version '2.6.7'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
-
-bootJar {
-    archiveFileName = 'takin-cloud-app-' + project.version + '.jar'
+jar {
+    enabled = false
 }
+
+String targetPath = "../build"
+String sourcePath = "./build/libs"
+
+def clear = tasks.register('clear-jar') {
+    doFirst {
+        delete(sourcePath)
+        delete(targetPath)
+    }
+}
+def copy = tasks.register('copy-jar') {
+    doLast {
+        copy {
+            println("拷贝文件开始")
+            from(sourcePath)
+            include('*.jar')
+            into(targetPath)
+            rename('^.+$', 'takin-cloud-app-' + project.version + '.jar')
+            println("拷贝文件完成")
+        }
+    }
+}
+
+build.mustRunAfter(clear)
+build.finalizedBy(copy)
 
 processResources {
     filesMatching('application-watchman.properties') {
