--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.profiles.active = default,watchman,dev
+spring.profiles.active       = default,watchman,dev
+watchman.application-version = ${version}
