修改callback回调信息校验

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     // 其它
     implementation libs.hutool
     implementation libs.influxdb
+    implementation 'com.alibaba:fastjson:1.2.79'
 }
 
 description = 'app'
