--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,23 @@ dependencies {
     implementation libs.hutool
     implementation libs.influxdb
     implementation 'com.alibaba:fastjson:1.2.79'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.19'
+    implementation 'org.apache.commons:commons-text:1.9'
+    implementation 'commons-io:commons-io:2.7'
+
+    //JmeterLib
+    implementation 'org.beanshell:bsh-core:2.0b4'
+    implementation 'com.google.guava:guava:30.1-jre'
+    implementation fileTree(dir: 'src/main/resources/jmeter/lib', includes: ['*.jar'])
+    implementation fileTree(dir: 'src/main/resources/jmeter/lib/ext', includes: ['*.jar'])
+
+    //Tests
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.6'
+}
+
+
+test {
+    useJUnitPlatform()
 }
 
 description = 'app'
