--- a/app/src/main/resources/application-default.properties
+++ b/app/src/main/resources/application-default.properties
@@ -1,5 +1,6 @@
 # \u670D\u52A1\u7AEF\u53E3\u914D\u7F6E
 server.port                                               = 80
+server.servlet.context-path                               = /takin-cloud
 # \u6570\u636E\u5E93\u914D\u7F6E
 spring.datasource.username                                = root
 spring.datasource.password                                = shulie@2020
