--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,8 @@ dependencies {
     implementation 'com.google.guava:guava:30.1-jre'
     implementation fileTree(dir: 'src/main/resources/jmeter/lib', includes: ['*.jar'])
     implementation fileTree(dir: 'src/main/resources/jmeter/lib/ext', includes: ['*.jar'])
-    implementation fileTree(dir: 'src/main/resources/jmeter/lib/plugins', includes: ['*.jar']).exclude {details ->
-        (!details.file.canonicalPath.contains('slf4j') && !details.file.canonicalPath.contains('gson'))}
+//    implementation fileTree(dir: 'src/main/resources/jmeter/lib/plugins', includes: ['*.jar']).exclude {details ->
+//        (!details.file.canonicalPath.contains('slf4j') && !details.file.canonicalPath.contains('gson'))}
 
     //Tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.6'
