--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,13 +74,16 @@ dependencies {
     //JmeterLib
     implementation 'org.apache-extras.beanshell:bsh:2.0b6'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation 'com.jayway.jsonpath:json-path:2.4.0'
     implementation fileTree(dir: 'src/main/resources/jmeter/lib', includes: ['*.jar'])
     implementation fileTree(dir: 'src/main/resources/jmeter/lib/ext', includes: ['*.jar'])
 //    implementation fileTree(dir: 'src/main/resources/jmeter/lib/plugins', includes: ['*.jar']).exclude {details ->
 //        (!details.file.canonicalPath.contains('slf4j') && !details.file.canonicalPath.contains('gson'))}
 
     //Tests
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.6'
+    testImplementation ('org.springframework.boot:spring-boot-starter-test:2.6.6'){
+        exclude group:"com.jayway.jsonpath", module:"json-path"
+    }
 }
 
 
