--- a/takin-cloud-app/src/main/resources/application.yml
+++ b/takin-cloud-app/src/main/resources/application.yml
@@ -95,7 +95,12 @@ takin:
     zk:
       server: 192.168.1.204:2181,192.168.1.204:2181,192.168.1.204:2181
 
-
+# 告警邮件账号配置
+warn:
+  mail:
+    host: 111.22.67.133
+    user: ctp@cmss.chinamobile.com
+    pass: 02b2493b727b31d781d68e7bdfb9ad9b
 #单元测试使用
 #pressure.engine.install.dir: /Users/shulie/pressure-engine/pressure-engine.tar.gz
 #pressure.engine.task.dir: /Users/shulie/pressure-engine
