--- a/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
@@ -17,8 +17,8 @@ repositories {
     }
 }
 
-group = 'io.shulie.takin.cloud.gradle'
-version = '5.4.0'
+group = 'io.shulie.takin.cloud'
+version = '5.4.0.6'
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 publishing {
@@ -36,8 +36,8 @@ tasks.withType(JavaCompile) {
 
 java {
     javadoc.options.addStringOption('Xdoclint:none', '-quiet')
-//    withSourcesJar()
-//    withJavadocJar()
+    withSourcesJar()
+    withJavadocJar()
 }
 
 javadoc {
