--- a/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
@@ -36,8 +36,8 @@ tasks.withType(JavaCompile) {
 
 java {
     javadoc.options.addStringOption('Xdoclint:none', '-quiet')
-    withSourcesJar()
-    withJavadocJar()
+//    withSourcesJar()
+//    withJavadocJar()
 }
 
 javadoc {
