--- a/takin-cloud-app/pom.xml
+++ b/takin-cloud-app/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.shulie.takin</groupId>
         <artifactId>takin-cloud</artifactId>
-        <version>5.2.6</version>
+        <version>5.2.6-20220901</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
