--- a/takin-cloud-bom/pom.xml
+++ b/takin-cloud-bom/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>io.shulie.takin</groupId>
-    <version>5.2.6</version>
+    <version>5.2.6-20220901</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
@@ -11,8 +11,8 @@
     <artifactId>takin-cloud-bom</artifactId>
 
     <properties>
-        <takin.cloud.version>5.2.6</takin.cloud.version>
-        <takin.cloud.sdk.version>5.2.6</takin.cloud.sdk.version>
+        <takin.cloud.version>5.2.6-20220901</takin.cloud.version>
+        <takin.cloud.sdk.version>5.2.6-20220901</takin.cloud.sdk.version>
     </properties>
 
     <dependencyManagement>
