--- a/takin-cloud-common/pom.xml
+++ b/takin-cloud-common/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>5.2.6</version>
+        <version>5.2.6-20220901</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
