修改配置文件文件

--- a/app/src/main/resources/application-default.properties
+++ b/app/src/main/resources/application-default.properties
@@ -22,3 +22,4 @@ mybatis.mapper-locations                                  = classpath:mapper/*.x
 mybatis-plus.global-config.banner                         = false
 mybatis-plus.configuration.log-impl                       = io.shulie.takin.cloud.app.conf.MyBatisLogger
 spring.jackson.deserialization.fail_on_unknown_properties = false
+drilling.ticket.check                                     = false
