--- a/takin-cloud-sdk/pom.xml
+++ b/takin-cloud-sdk/pom.xml
@@ -57,6 +57,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
