fix:限制场景的warn写入数量

--- a/takin-cloud-app/src/main/resources/application.yml
+++ b/takin-cloud-app/src/main/resources/application.yml
@@ -96,6 +96,8 @@ takin:
   pradar:
     zk:
       server: 192.168.1.204:2181,192.168.1.204:2181,192.168.1.204:2181
+  sceneWarn:
+    saveCount: 100
 
 
 #单元测试使用
