新增时间修改

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.shulie.takin</groupId>
     <artifactId>takin-cloud</artifactId>
-    <version>5.2.6-20221019</version>
+    <version>5.2.6</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
