--- a/takin-cloud-entrypoint/pom.xml
+++ b/takin-cloud-entrypoint/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>takin-cloud</artifactId>
         <groupId>io.shulie.takin</groupId>
-        <version>5.2.6-20221019</version>
+        <version>5.2.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
