新增时间修改

--- a/takin-cloud-app/pom.xml
+++ b/takin-cloud-app/pom.xml
@@ -148,7 +148,7 @@
                 <artifactId>buildnumber-maven-plugin</artifactId>
                 <version>1.4</version>
                 <configuration>
-                    <timestampFormat>yyyyMMdd-HHmmss</timestampFormat>
+                    <timestampFormat>yyyyMMddHHmmss</timestampFormat>
                 </configuration>
                 <executions>
                     <execution>
