--- a/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/io.shulie.takin.cloud.java-conventions.gradle
@@ -23,9 +23,13 @@ java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            from(components.java)
+        mavenJava(MavenPublication) {
+            from components.java
         }
+    }
+
+    repositories {
+        mavenLocal()
     }
 }
 
