--- a/takin-cloud-app/pom.xml
+++ b/takin-cloud-app/pom.xml
@@ -160,6 +160,6 @@
                 <inherited>false</inherited>
             </plugin>
         </plugins>
-        <finalName>${project.artifactId}-${project.version}-${timestamp}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
 </project>
